# stellarAgent

./: .aider.chat.history.md  .aider.conf.yml  .commitlintrc.mjs  .env.vault  .envrc  .gitignore  .pre-commit-config.yaml  ABOUT.md  CONVENTIONS.md  Oops.rej  Oops.rej.orig  README.md  codecov.SHA256SUM  codecov.yml  graph.mermaid  lefthook.yml  n.rej  package.json  pnpm-lock.yaml  pykanban.json  pyproject.toml  requirements.in  requirements.txt  slim.report.json  stellar-blockchain-wallet-management-app-1733622008246.sql  turbo.json  turbo.mermaid
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: autofix.yml  codecov.yml  dependabot.yml  main.yml
.openhands/microagents/: repo.md
ai-docs/: stellarAgentDevelopmentPlan.md
ai-docs/fabric-yt/: agent-demo-days-ep-1.md  aider-qwen-extract-instructions.md  gemini-2-computer-use.md  saas-extract-wisdom-agents.md  start-saas.md
ai-docs/requirements-gathering/: fabric-create-coding-project.md  gpt-pilot-project-description-guide.md
ai-docs/stellar-sdk/: Haystack RAG Stellar SDK.md
apps/StAg-ai-gateway/: nitric.yaml  pyproject.toml
apps/ai-gateway/: .coverage  .dockerignore  .gitignore  .sourcery.yaml  Dockerfile  Dockerfile.dive  README.md  compose.yaml  devcontainer.json  main.py  out.gv  package.json  pyproject.toml  pyproject_1.toml  requirements.in  requirements.txt  slim.report.json  trigger.config.ts  tui.py  tui.tcss
apps/ai-gateway/.devcontainer/: Dockerfile  devcontainer.json
apps/ai-gateway/docs/: plan-ai-gateway-tui.md
apps/ai-gateway/src/: tui.py
apps/ai-gateway/src/ai_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/ai-gateway/src/not_diamond/: main.py  not_diamond_client.py
apps/ai-gateway/src/portkey/: portkey_client.py
apps/ai-gateway/src/tui/: layout01.py  main.py  tui.tcss
apps/ai-gateway/tests/: test_ai_gateway.py  test_main.py
apps/beszel/: docker-compose.yml  package.json  readme.beszel.md  slim.report.json
apps/browser-agent/: agent.py  package.json  pyproject.toml  requirements.txt
apps/cpu-ops/: main.py  package.json  pyproject.toml  requirements.in  requirements.txt
config/: cz.config.cjs  cz.config.mjs
devLog/: 12-21-24-devLog.md  12-24-24-devLog.md  devLog.md
devcontainer/: README.md
pm/: init_todo.md
scripts/: aider.sh  openhands.sh
stellarAgentRepo/: README.md  package.json  pnpm-lock.yaml  turbo.json
techStack_docs/: tech-stack.md
(+96 files in other folders)
