[project]
dependencies = [
    "portkey_ai",
    "python_dotenv",
    "fastapi[standard]",
    "uvicorn",
    "stellar-sdk",
    "aider",
    "pydantic>=2.10.4",
    "posthog>=3.7.5",
]
name = "ai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
[project.scripts]
ai-gateway = "ai-gateway:main"
