[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
[project]
dependencies = [
    "portkey_ai",
    "python_dotenv",
    "fastapi[standard]",
    "uvicorn",
    "stellar-sdk",
    "aider",
    "pydantic>=2.10.4",
    "posthog>=3.7.5",
    "pytest",
    "playwright>=1.49.1",
    "textual>=1.0.0",
    "textual-dev>=1.7.0",
    "ruff>=0.9.2",
]
name = "ai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
ai-gateway = "tui:run"
